# judgekit

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/calibration/: cases.jsonl  judge_strong.jsonl  judge_weak.jsonl
examples/exact/: cases.jsonl  outputs.jsonl
examples/judge/: support_quality.json
examples/regex/: cases.jsonl  outputs.jsonl
examples/structured/: cases.jsonl  outputs.jsonl
src/judgekit/: __init__.py  calibration.py  cli.py  dataset.py  errors.py  hashing.py  judge.py  models.py  providers.py  runner.py  scorers.py  stats.py
tests/: test_calibration.py  test_cli.py  test_dataset.py  test_hashing.py  test_judge.py  test_judge_config.py  test_models.py  test_providers.py  test_runner.py  test_sanity.py  test_scorers.py  test_stats.py
